fix overflows

--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,5 @@ html {
 
 body {
   height: 100%;
-}
-
-@media (max-width: 1024px) {
-  html {
-    overflow: auto;
-    overflow-x: hidden;
-  }
+  overflow-x: hidden;
 }
